--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@ p{
 
 h1 {
 	font-weight: 200;
+       text-align:center;
 }
 
 body {
@@ -236,10 +237,10 @@ Never leave me alone never ever, I will seriously can't love anyone else except 
 
 
 
-I loveeeeeeeeeeeeeeee youuuuuuuuuuu Pagluuuuuuuu........
 
 
 </p>
+<h1>I loveeeeeeeeeeeeeeee youuuuuuuuuuu Pagluuuuuuuu........</h1>		
 <img src="Parul.png" width="300px;" height="400px;" class="center">
 
 	</div>
