--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@ body {
 .container {
 	position: relative;
 	width: 100%;
-	height: 1300px;
+	height: 1450px;
 	overflow: hidden;
 }
 
@@ -220,22 +220,36 @@ margin-right:auto;
 	<div class="message">
 		<h1>Hi, meri jaaan</h1>
 		<p>Soo aaj sochne baitha tou realize ho rha hai hume 4 months complete ho gye hain, I mean I can't explain the feeling, mujhe tou yakin bhi nhi ho rha main kissi ke sath 4 month se relationship mai hoon, Matlab kaise ho gya yeh aab realize ho rha hai yeh sab, I mean seriously mai kissi ldki ko pyar krne ki soch bhi nhi skta tha matlab merko sachii pyar ka matlab nhi pta tha, varna soch mai itna time leta tujhe propose krne  mai, merko kabhi realize hi nhi hua ki pyar mai kya kya hota hai, but seriouslt you taught me a lottt, Thank you sooooo much.
-
-
+<br>
+<br>
 
 Last four months tere sath kese niakal gye pta hi nhi chala, but the feelings in these 4 months was out of this world, humari fights bhi hui no matter kiski vajah se, sort bhi hui, pta nhi kitni situations se guzre, yaa pyar bhi bohot kiya ek dusre ko, aur pta nhi kya kya kiya iss beech kabhi teri emotions ko harm kiya ho tou I am really sorry, Really so so sorry.
-
+<br>
 But main tujhe jitna thank you kahoon utna kam hai, matlab tunai inn 4 months mai mere liye kya kya kiya matlab kya kya kiya sab kuch tou kiya hai, kya nhi kiya voh sochne vali cheez hai and sabse importantly pyaar bohot kiya tunai and this is the only thing I want from you in my whole life merko sachii kuch aur nhi chahiye merko sirf tera pyaar chahiye bohot saraaa pyaar, A you know meri 18 year ki life mai merko kabhi pyaar vali feeling nhi aai so 18 years ka payaar terko dena hai tujhe fullfill krna pdega..
+<br>
+<br>
 
 
+Tujhe pta hai jab bhi tujhse baat krta hoon na mere dil mai feelings ka toofan aa jata hai agar tu mere saamne ho naa uss time then I will hug you sooo tightly that you even can't breath, marko pta hi nhi chalta kab tu mere thoughts par dominate krne lgti hai, merko seriously aaisa lgta hai jab bhi tere bare mai sochta hoon jaise mera dill abhi blast ho jaiga aaisa lgta hai jaise pta nhi kitna heavy ho gya hai mujhse control hi nhi hota hai, 
+<br>
+Like seriously tu merko har samai hasati hai, mera mood kitna bhi off ho kitna bhi upset houn mai tere ek mssg se mere face par vo smile vapas aa jati hai, your words were like energy booster for me.
+<br>
+<br>
+
+
+Tu kahan thi yrr 18 years se, merko samaj nhi aata matlab mai itna express krta hoon but seriously 50% feelings ke liye tou mere paas words hi nhi hain jinke through mai express kr paun, I don't know tujhe yeh sab joke lgta hai yaa serious lgta hai, but mere liye tera har ek word itna special hota hai like agar mera bss chale tou mai tera har ek word frame krvaloon.
+<br>
+<br>
 
 Aacha sunn na merko sachii terese bohot saraa pyaar ho gya hai yrr merko nhi laga tha ki mai tujhse inta passionately pyar krunga, seriously I love you madlyy.
-
-
+<br>
+<br>
 
 Never leave me alone never ever, I will seriously can't love anyone else except you, log bolte hai hum mar jainge agar tu chod gai tou, but thats irrelevent mai tou sirf itna kahunga I will not accept any other in my live except you...
+<br>
+<br>
 
-
+I loveeeeeeeeeeeeeeee youuuuuuuuuuu Pagluuuuuuuu........
 
 
 
